--- a/dataset/data.yaml
+++ b/dataset/data.yaml
@@ -1,5 +1,5 @@
 # dataset path
-path: /home/hjj/Desktop/github_code/RTDETR/
+path: E:/2345Downloads/Alleluia/redetr/redet_backbone/
 train: ./dataset/images/train
 val: ./dataset/images/val
 test: ./dataset/images/test
